# POC-001

./: .gitignore  README.md  package-lock.json
atto-poc/: .env.example  .gitignore  README.md  bifrost-config.json  docker-compose.yml  litellm_config.yaml  main.py  pyproject.toml  ui.py
atto-poc/app/: config.py  hooks.py  models.py  orchestrator.py  prompts.py  tools.py  tracer.py
castari-proxy/: DEEP_DIVE.md
castari-proxy/claude-agent-demo/: .env.example  README.md  package-lock.json
castari-proxy/claude-agent-demo/app/: globals.css  page.tsx
castari-proxy/claude-agent-demo/app/api/generate/: route.ts
castari-proxy/claude-agent-demo/app/api/ollama/v1/messages/: route.ts
castari-proxy/claude-agent-demo/app/api/portkey/v1/messages/: route.ts
castari-proxy/claude-agent-demo/app/api/workspace/: route.ts
castari-proxy/claude-agent-demo/app/components/: AttoChat.tsx  Chat.tsx
castari-proxy/claude-agent-demo/lib/: env.ts
castari-proxy/claude-agent-demo/lib/agent/: atto-config.ts  atto-session.ts  model-allowlist.ts  session.ts
castari-proxy/claude-agent-demo/lib/policy/: permission.ts
castari-proxy/claude-agent-demo/lib/security/: internal-routes.ts
castari-proxy/claude-agent-demo/tests/: generate-route.test.ts  internal-routes.test.ts  policy.test.ts  portkey-route.test.ts  queryCastari-portkey.test.ts  session.test.ts
castari-proxy/src/: queryCastari.ts
castari-proxy/worker/: README.md  wrangler.toml
castari-proxy/worker/src/: config.ts  index.ts  provider.ts  stream.ts  types.ts
